--- a/wp-content/themes/samba-child/less/project-list.less
+++ b/wp-content/themes/samba-child/less/project-list.less
@@ -679,15 +679,19 @@
                 color: darken(@grey-bg, 52%);
                 text-decoration: none;
                 .fontmont;
+                display: block;
+                line-height: 17px;
+                margin-bottom: 7px;
+                margin-top: 3px;
             }
             span {transition: all 0.5s;}
-            .single_p_title {font-weight: bold; margin-right: 5px;}
+            .single_p_title {font-weight: bold; margin-right: 4px;}
             .single_p_light {color: #c5c5c5;}
-            .single_p_location { margin-left: 5px;}
+            .single_p_location { margin-left: 2px;}
             .map_excerpt {
                 margin-bottom: -1px;
-                line-height: 17px;
-                margin-top: 2px;
+                line-height: 15px;
+                margin-top: 4px;
                 font-size: 12px;
             }
             p {
